# ais_serial_ros

./: CMakeLists.txt  package.xml  readme.md
config/: ais_serial.yaml
include/: if_ais_serial.hpp  if_serial_boost.hpp
launch/: ais_serial.launch
msg/: ais_data.msg
src/: ais_serial_ros_node.cpp  if_ais_serial.cpp
