<?xml version="1.0"?>
<package format="2">
  <name>ais_serial_ros</name>
  <version>0.0.1</version>
  <description>The ais ros package receive, parse, publish ros ais message, and send tha ais raw frame through a udp link</description>
  <license>MIT</license>

  <maintainer email="ronan.douguet@univ-ubs.fr">Ronan Douguet</maintainer>
  <author email="ronan.douguet@univ-ubs.fr">Ronan Douguet</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>serial</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>serial</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>serial</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
